Update chatbot preview and footer year

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             color: var(--text-dim);
         }
         .preview-mockup::before {
-            content: "Vista previa del chatbot integrado";
+            content: "";
         }
 
         section {
@@ -640,7 +640,9 @@
         </header>
 
         <section class="preview-section">
-            <div class="preview-mockup"></div>
+            <div class="preview-mockup">
+                <img src="https://i.ibb.co/cSCSjsyS/11184177.gif" alt="Vista previa del chatbot integrado" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
         </section>
 
         <section id="que-es">
@@ -788,11 +790,6 @@
                         </ul>
                     </div>
                 </div>
-                <div class="column-visual">
-                    <div class="preview-mockup" style="height: 450px;">
-                        <p style="text-align: center; padding: 20px;">Tu marca, tu estilo</p>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -802,7 +799,7 @@
         </section>
 
         <footer>
-            <p>© 2024 AZ InnovationX. Todos los derechos reservados.</p>
+            <p>© 2025 AZ InnovationX. Todos los derechos reservados.</p>
         </footer>
     </main>
 
