--- a/index.html
+++ b/index.html
@@ -851,6 +851,7 @@
         <section class="cta-section">
             <h2>¿Listo para transformar tu atención al cliente?</h2>
             <p>Disponible para instalar en tu página web con tu logo, colores y datos. Eleva la experiencia de tus clientes y potencia tus resultados hoy mismo.</p>
+            <a href="https://wa.me/5620042412?text=Hola,%20estoy%20interesado%20en%20solicitar%20un%20Chatbot%20para%20mi%20negocio." class="cta-button" target="_blank">Solicitar mi Chatbot</a>
         </section>
 
         <footer>
